--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: youngjun 기술 블로그
+subtitle: html + css + javascript + java + spring + python + linux 
 ---
 
