--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: youngjun 기술 블로그
-subtitle: html + css + javascript + java + spring + python + linux 
+title: 기술 블로그
+subtitle: javascript + java + python + linux 
 ---
 
